# tts-web

./: .gitignore  CANDLE_QMATMUL_BRIEF.md  CLAUDE.md  Cargo.toml  LICENSE  QUANTIZATION.md  QUANTIZATION_RESEARCH.md  README.md  quantize_to_gguf.py
.cargo/: config.toml
convergence/: log.md
convergence/notes/: investigate-tada-wasm-performance-and-sh-next.md  rebase-feat-burn-wgpu-llama-onto-tts-web-next.md
convergence/queues/: investigate-tada-wasm-performance-and-sh-global-review.md  investigate-tada-wasm-performance-and-sh-self-review.md  investigate-tada-wasm-performance-and-sh.md  rebase-feat-burn-wgpu-llama-onto-tts-web-global-review.md  rebase-feat-burn-wgpu-llama-onto-tts-web-self-review.md  rebase-feat-burn-wgpu-llama-onto-tts-web.md
convergence/research/: investigate-tada-wasm-performance-and-sh.md  rebase-feat-burn-wgpu-llama-onto-tts-web.md
convergence/steps/investigate-tada-wasm-performance-and-sh/1-instrument/: 1.md
convergence/steps/investigate-tada-wasm-performance-and-sh/10-acceptance/: 1.md
convergence/steps/investigate-tada-wasm-performance-and-sh/11-global-review/: 1.md
convergence/steps/investigate-tada-wasm-performance-and-sh/2-baseline/: 1.md  2.md
convergence/steps/investigate-tada-wasm-performance-and-sh/4-cfg-ab/: 1.md  2.md  3.md
convergence/steps/investigate-tada-wasm-performance-and-sh/5-tasks-max-sweep/: 1.md  2.md
convergence/steps/investigate-tada-wasm-performance-and-sh/5b-substep-profiling/: 1.md  2.md
convergence/steps/investigate-tada-wasm-performance-and-sh/6-land-final/: 1.md
crates/kitten-core/: Cargo.toml
crates/kitten-core/examples/: kitten_debug.rs  kitten_generate.rs
crates/kitten-core/src/: bert.rs  config.rs  decoder.rs  kitten_model.rs  lib.rs  phoneme_map.rs  predictor.rs  text_encoder.rs  text_preprocess.rs
crates/kitten-core/tests/: integration.rs
crates/kitten-wasm/: Cargo.toml
crates/kitten-wasm/src/: lib.rs
crates/tada-core/: Cargo.toml
crates/tada-core/examples/: compare_generation.rs  decode_intermediates.rs  tada_generate.rs
crates/tada-core/src/: audio_check.rs  config.rs  decoder.rs  flow_matching.rs  lib.rs  llama.rs  tada_model.rs  vibevoice.rs
crates/tada-wasm/: Cargo.toml
crates/tada-wasm/.cargo/: config.toml
crates/tada-wasm/examples/: tada_generate_burn.rs  verify_burn.rs
crates/tada-wasm/src/: gguf.rs  lib.rs
crates/tada-wasm/src/model/: attention.rs  kv_cache.rs  mod.rs  rope.rs  vibevoice.rs
crates/tada-wasm/src/wgsl/: shader_naive.wgsl  shader_q8_0.wgsl
crates/tada-wasm/tests/: compare_burn_candle.rs
crates/tts-core/: Cargo.toml
crates/tts-core/examples/: tts_generate.rs
crates/tts-core/src/: config.rs  flow_lm.rs  lib.rs  mlp.rs  tts_model.rs
crates/tts-core/tests/: baseline_original.rs  intermediate_dump.rs  pipeline_debug.rs  quant_validation.rs
crates/tts-wasm/: Cargo.toml
crates/tts-wasm/src/: lib.rs
docs/: benchmarks.md  kitten-architecture.md  lab-notebook.md  results.md  run_log.md
docs/kitten/: log.md
docs/old/: benchmark_run_2026-03-13.json  run_log.md
docs/tada/: lab-notebook.md  results.md
kitten-pkg/: kitten_wasm.js  kitten_wasm_bg.wasm  package.json
pkg/: package.json  tts_wasm.d.ts  tts_wasm.js  tts_wasm_bg.wasm  tts_wasm_bg.wasm.d.ts
plans/: browser-testing.md  next-session-prompt.md  perf-plan.md  quantized-inference.md
scripts/: analyze-trace.py  compare_pipeline.py  convert_kitten_to_safetensors.py  decode_rust_intermediates.py  download_expresso_clips.py  fetch_emov.py  fetch_sbcsae_extra.py  generate_all_voices.py  inspect_kitten_onnx.py  measure_tada_baseline.mjs  measure_tada_cfg_ab.mjs  measure_tada_tasks_max_sweep.mjs  measure_tada_trace.mjs  precompute_voice.py  quantize_tada.py  save_generation_debug.py  tada_reference_generate.py  test_decode_python_intermediates.py  test_demo_e2e.mjs  trace_decoder_shapes2.py  trace_divergence.py  trace_onnx.py  validate_quant.py
scripts/kitten/: analyze_trace.py  extract_onnx_intermediates.py  kitten_reference_generate.py  onnx_intermediates.py
scripts/pocket-tts/: quantize.py  quantize_to_gguf.py
scripts/shared/: definitive_comparison.py  trace_decoder_shapes.py
scripts/tada/: benchmark_voices.sh  compare_bench_audio.py  compare_decoder_intermediates.py  compare_tada_intermediates.py  generate_ljspeech_reference.py  precompute_voice.py  quantize_tada.py  run_benchmarks.py  tada_reference_generate.py  test_gguf_in_python.py  test_gguf_zeroshot.py
voices/: amazement.json  amazement.safetensors  amusement.json  amusement.safetensors  angry.json  angry.safetensors  confused.json  confused.safetensors  default.json  default.safetensors  disgusted.json  disgusted.safetensors  enunciated.json  enunciated.safetensors  happy.json  happy.safetensors  jeff.json  jeff.safetensors  karen.json  karen.safetensors  laughing.json  laughing.safetensors  ljspeech.json  ljspeech.safetensors  ljspeech_long.json  ljspeech_long.safetensors  rickie.json  rickie.safetensors  rickie_trimmed.json  rickie_trimmed.safetensors  sad.json  sad.safetensors  sad_f.json  sad_f.safetensors  sleepy.json  sleepy.safetensors  walt.json  walt.safetensors  whisper.json  whisper.safetensors
voices/matrix/: ex01_confused.json  ex01_default.json  ex01_enunciated.json  ex01_happy.json  ex01_laughing.json  ex01_sad.json  ex01_whisper.json  ex02_confused.json  ex02_default.json  ex02_enunciated.json  ex02_happy.json  ex02_laughing.json  ex02_sad.json  ex02_whisper.json  ex03_confused.json  ex03_default.json  ex03_enunciated.json  ex03_happy.json  ex03_laughing.json  ex03_sad.json  ex03_whisper.json  ex04_confused.json  ex04_default.json  ex04_enunciated.json  ex04_laughing.json  ex04_sad.json  ex04_whisper.json
web/: audio-worklet.js  index.html  kitten-worker.js  serve.mjs  tada-worker.js  tts-client.js  worker.js
(+11 files in other folders)
