[workspace]
members = ["crates/tts-core", "crates/tts-wasm"]
resolver = "3"

[patch."https://github.com/idle-intelligence/mimi-rs.git"]
mimi-rs = { path = "../mimi-rs" }

[patch.crates-io]
candle-core = { path = "../../candle/candle-core" }
candle-nn = { path = "../../candle/candle-nn" }

[profile.release]
lto = "fat"
codegen-units = 1
