[package]
name = "kitten-core"
version = "0.1.0"
edition = "2024"

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate"]
espeak = ["dep:espeak-ng", "espeak-ng/bundled-data-en"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
anyhow = "1.0"
safetensors = "0.4"
espeak-ng = { version = "0.1", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1.0"
