[package]
name = "tada-core"
version = "0.1.0"
edition = "2024"

[features]
metal = ["candle-core/metal", "candle-nn/metal"]
accelerate = ["candle-core/accelerate"]

[dependencies]
candle-core = "0.9"
candle-nn = "0.9"
mimi-rs = { git = "https://github.com/idle-intelligence/mimi-rs.git" }
rand = "0.9"

[dev-dependencies]
tokenizers = { version = "0.21", default-features = false, features = ["unstable_wasm"] }
rand_distr = "0.5"
serde_json = "1"
