[package]
name = "tts-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
tts-core = { path = "../tts-core" }
mimi-rs = { path = "../../../mimi-rs" }
candle-core = "0.9"
candle-nn = "0.9"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9", default-features = false, features = ["std_rng"] }
rand_distr = "0.5"
